// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly with icon 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with icon and leading 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with icon and trailing 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
  </button>
</div>
`;

exports[`Button > renders correctly with label 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with leading and trailing icons 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
  </button>
</div>
`;

exports[`Button > renders correctly with leading icon 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant ghost 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 disabled:bg-transparent aria-disabled:bg-transparent px-2.5 py-1.5 gap-1.5 text-sm text-default hover:bg-elevated active:bg-elevated focus-visible:outline-inverted"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant link 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm text-muted hover:text-default active:text-default focus-visible:outline-inverted"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant outline 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 ring ring-inset px-2.5 py-1.5 gap-1.5 text-sm ring-accented text-default bg-default hover:bg-elevated active:bg-elevated focus-visible:outline-inverted disabled:bg-default"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant soft 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm text-default bg-elevated hover:bg-accented/75 active:bg-accented/75 focus-visible:outline-inverted disabled:bg-elevated"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant solid 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-inverted text-inverted hover:bg-inverted/90 active:bg-inverted/90 focus-visible:outline-inverted disabled:bg-inverted aria-disabled:bg-inverted"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant subtle 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 ring ring-inset px-2.5 py-1.5 gap-1.5 text-sm text-default ring-accented bg-elevated hover:bg-accented/75 active:bg-accented/75 focus-visible:outline-inverted disabled:bg-elevated"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant ghost 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 disabled:bg-transparent aria-disabled:bg-transparent px-2.5 py-1.5 gap-1.5 text-sm text-primary hover:bg-primary/10 active:bg-primary/10 focus-visible:outline-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant link 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm text-primary hover:text-primary/75 active:text-primary/75 focus-visible:outline-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant outline 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 ring ring-inset px-2.5 py-1.5 gap-1.5 text-sm ring-primary/50 text-primary hover:bg-primary/10 active:bg-primary/10 focus-visible:outline-primary disabled:bg-transparent"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant soft 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm text-primary bg-primary/10 hover:bg-primary/15 active:bg-primary/15 focus-visible:outline-primary disabled:bg-primary/10"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant solid 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant subtle 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 ring ring-inset px-2.5 py-1.5 gap-1.5 text-sm text-primary ring-primary/25 bg-primary/10 hover:bg-primary/15 active:bg-primary/15 focus-visible:outline-primary disabled:bg-primary/10"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with size lg 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-3 py-2 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with size md 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with size sm 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2 py-1 gap-1 text-xs bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with slots 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    Leading slot
    
    
    Default slot
    
    
    Trailing slot
    
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size lg 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary p-2"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-5"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <!--v-if-->
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size md 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary p-1.5"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <!--v-if-->
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size sm 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 gap-1 text-xs bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary p-1"
  >
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-3"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
    
    <!--v-if-->
    
    
    <!--v-if-->
    
  </button>
</div>
`;

exports[`Button > renders correctly with trailing icon 1`] = `
<div>
  <button
    aria-disabled="false"
    class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 px-2.5 py-1.5 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 active:bg-primary/75 focus-visible:outline-primary disabled:bg-primary aria-disabled:bg-primary"
  >
    
    <!--v-if-->
    
    
    <span
      class="truncate"
    >
      Button
    </span>
    
    
    <svg
      aria-hidden="true"
      class="shrink-0 size-4"
      height="1em"
      role="img"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    />
    
  </button>
</div>
`;
